--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -19,6 +19,7 @@
 #@      "git_resource",
 #@      "gci_resource",
 #@      "registry_image_resource",
+#@      "semver_resource",
 #@      "image_family_name",
 #@      "build_job",
 #@      "build_job_name",
@@ -43,6 +44,7 @@ resource_types:
       repository: smgoller/gci-resource
 
 resources:
+  - #@ semver_resource("version")
   - #@ gcr_image_resource("gcloud-image", "google.com/cloudsdktool/cloud-sdk", "alpine")
   - #@ project_gcr_image_resource("task-image", "geode-native-task")
   - #@ registry_image_resource("packer-image", "hashicorp/packer")
