--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -44,7 +44,7 @@ resource_types:
       repository: smgoller/gci-resource
 
 resources:
-  - #@ semver_resource("version")
+  - #@ semver_resource("version", "1.14.0-build.0")
   - #@ gcr_image_resource("gcloud-image", "google.com/cloudsdktool/cloud-sdk", "alpine")
   - #@ project_gcr_image_resource("task-image", "geode-native-task")
   - #@ registry_image_resource("packer-image", "hashicorp/packer")
