Configure version, date, etc.

--- a/ci/templates.lib.yml
+++ b/ci/templates.lib.yml
@@ -178,6 +178,7 @@ config:
   platform: linux
   inputs:
     - name: instance
+    - name: version
     - name: source
   outputs:
     - name: package
@@ -199,10 +200,18 @@ config:
         git_rev=$(git rev-parse HEAD)
         popd
 
+        version=$(cat version/number)
+        builddate=$(date)
+
         remote_shell git clone ${git_url} source
         remote_shell cmake -E chdir source git checkout ${git_rev}
         remote_shell cmake -E make_directory build
-        remote_shell cmake -E chdir build cmake ../source ${CMAKE_CONFIGURE_FLAGS} -DCMAKE_BUILD_TYPE=${CMAKE_CONFIG}
+        remote_shell cmake -E chdir build cmake ../source ${CMAKE_CONFIGURE_FLAGS} \
+            -DCMAKE_BUILD_TYPE=${CMAKE_CONFIG} \
+            -DPRODUCT_VERSION=${version} \
+            -DPRODUCT_BUILDDATE="${builddate}" \
+            -DPRODUCT_SOURCE_REVISION=${git_rev} \
+            -DPRODUCT_SOURCE_REPOSITORY=${git_url}
         remote_shell cmake --build build --config ${CMAKE_CONFIG} -- ${CMAKE_BUILD_FLAGS}
         remote_shell cmake --build build --config ${CMAKE_CONFIG} --target docs -- ${CMAKE_BUILD_FLAGS}
         remote_shell cmake -E chdir build cpack -C ${CMAKE_CONFIG} -G "${CPACK_GENERATORS}" | tee cpack.out
