--- a/ci/release/pipeline.yml
+++ b/ci/release/pipeline.yml
@@ -14,20 +14,22 @@
 #! limitations under the License.
 
 #@ load("templates.lib.yml",
-#@      "gcr_image_resource",
-#@      "project_gcr_image_resource",
 #@      "git_resource",
+#@      "gci_resource",
 #@      "extends_build",
+#@      "image_family_name",
 #@      "registry_image_resource",
-#@      "semver_resource",
-#@      "build_resources",
-#@      "build_jobs",
 #@      "build_job_name",
+#@      "packer_job",
 #@      "packer_job_name",
 #@      "docker_job",
 #@      "docker_job_name",
 #@      "update_pipeline_job",
 #@      "update_pipeline_job_name",
+#@      "build_resources",
+#@      "package_resource",
+#@      "package_resource_name",
+#@      "put_package",
 #@      "version_source_job",
 #@      "version_source_job_name")
 #@ load("@ytt:data", "data")
@@ -35,33 +37,58 @@
 #@ load("@ytt:struct", "struct")
 #@ load("@ytt:template", "template")
 
-resource_types:
-  - name: gci
-    type: docker-image
-    source:
-      repository: smgoller/gci-resource
-  - name: gcs-resource
-    type: docker-image
-    source:
-      repository: frodenas/gcs-resource
+#@overlay/match by=overlay.all
+---
 
 resources:
-  - #@ semver_resource("version", "1.14.0-build.0")
-  - #@ gcr_image_resource("gcloud-image", "google.com/cloudsdktool/cloud-sdk", "alpine")
-  - #@ project_gcr_image_resource("task-image", "geode-native-task")
+  #@overlay/append
   - #@ registry_image_resource("packer-image", "hashicorp/packer")
-  - #@ registry_image_resource("ytt-image", "gerritk/ytt")
-  - #@ git_resource("source", data.values.repository.url, data.values.repository.branch, ignore_paths=["ci/*", "packer/*"])
-  - #@ git_resource("ci-source", data.values.repository.url, data.values.repository.branch, ["ci/*"])
+  #@overlay/append
   - #@ git_resource("packer-source", data.values.repository.url, data.values.repository.branch, ["packer/*"])
-  - #@ template.replace(build_resources(data.values.builds, data.values.configs))
+    #@ for build in data.values.builds:
+  #@overlay/append
+  - #@ gci_resource(extends_build(build).source_image_family)
+    #@ for config in data.values.configs:
+    #@ for package in build.packages:
+  #@overlay/append
+  - #@ package_resource(extends_build(build), config , package)
+    #@ end
+    #@ end
+    #@ end
 
 jobs:
+  #@overlay/match by="name", missing_ok=True
+  #@overlay/append
   - #@ version_source_job()
-  - #@ update_pipeline_job()
+  #@overlay/append
+  - #@ update_pipeline_job("release")
+  #@overlay/append
   - #@ docker_job("task-image", "ci-source", "ci/docker/task")
-  - #@ template.replace(build_jobs(data.values.builds, data.values.configs))
+    #@ for build in data.values.builds:
+  #@overlay/append
+  - #@ packer_job(extends_build(build))
+    #@ for config in data.values.configs:
+  #@overlay/match by="name", missing_ok=True
+  - name: #@ build_job_name(extends_build(build), config)
+    plan:
+      #@overlay/match by=overlay.index(0)
+      - in_parallel:
+          steps:
+            #@overlay/match by=overlay.subset({"get": "version"})
+            - get: version
+              #@overlay/match missing_ok=True
+              passed: [ version-source ]
+            #@overlay/match by=overlay.subset({"get": "source"})
+            - get: source
+              #@overlay/match missing_ok=True
+              passed: [ version-source ]
+      #@overlay/match by=overlay.all
+      #@overlay/append
+      - #@ put_package(build, config)
+        #@ end
+        #@ end
 
+      #@overlay/match missing_ok=True
 groups:
   - name: builds
     jobs:
